--- a/.github/workflows/force_build.yml
+++ b/.github/workflows/force_build.yml
@@ -1,4 +1,4 @@
-name: alt2
+name: Force Build Updated
 
 on:
   workflow_dispatch:
@@ -18,7 +18,7 @@ jobs:
         run: |
           go get github.com/tmedwards/tweego
           export PATH=$PATH:$(go env GOPATH)/bin
-          tweego halfguineapress.twee -o dist/index.html
+          tweego mokoshtower.twee -o dist/index.html
                   
       - name: Deploy to Pages
         uses: peaceiris/actions-gh-pages@v3
